# financial-policy-rag

./: .gitignore  README.md  app.py  pyproject.toml
config/: settings.py
data/chroma_db/: chroma.sqlite3
notebook/: chatbot.ipynb
